--- a/image-classifier.ipynb
+++ b/image-classifier.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Chunlin Zhu cz2487\n",
-    "Motong Chen mc3917"
+    "Chunyang Zhu"
+  
    ]
   },
   {
